# bayesian-inference

./: .gitignore  Pipfile  README.md  init.sh  pyproject.toml
analysis/: common_base.py  data_IO.py  emulation.py  mcmc.py  plot_emulation.py  plot_mcmc.py  plot_utils.py  steer_analysis.py
config/: hadron_jet_RAA.yaml  jet_substructure.yaml  rehlers.yaml
src/bayesian_inference/: data_IO.py  emulation.py  helpers.py  log_posterior.py  mcmc.py  plot_analyses.py  plot_closure.py  plot_emulation.py  plot_input_data.py  plot_mcmc.py  plot_qhat.py  plot_utils.py  preprocess_input_data.py  steer_analysis.py
tests/: test_data_IO.py
tests/test_data/: observables.h5
